# ztinfra-enclaveproducedhtml

./: .gitignore  Cargo.toml  Dockerfile  README.md  ztinfra-service.yaml
.github/workflows/: release-enclave.yml
coco-wrapper/: server.py
scripts/: build-coco-image.sh  build-enclave.sh
src/: main.rs
tools/: generate_provenance.py  generate_release_manifest.py  install-nitro-cli.sh  rebuild-verify.sh
