[package]
name = "ztinfra-enclaveproducedhtml"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aws-nitro-enclaves-nsm-api = "0.4"
base64 = "0.22"
p256 = { version = "0.13", features = ["ecdsa"] }
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.45", features = ["io-util", "macros", "rt-multi-thread", "signal"] }
tokio-vsock = "0.7"
